# commieLAB1

./: .gitignore  CMakeLists.txt  unixBuild.sh
src/: main.c  structs.h
